--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 	<profiles>
 		<!-- Arquillian WildFly managed profile -->
 		<profile>
-			<id>arq-wildfly-managed</id>
+			<id>arquillian</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
@@ -97,7 +97,15 @@
 											<version>${version.org.wildfly}</version>
 											<type>zip</type>
 											<overWrite>false</overWrite>
-											<outputDirectory>${project.build.directory}</outputDirectory>
+											<outputDirectory>${project.build.directory}/node1</outputDirectory>
+										</artifactItem>
+										<artifactItem>
+											<groupId>org.wildfly</groupId>
+											<artifactId>wildfly-dist</artifactId>
+											<version>${version.org.wildfly}</version>
+											<type>zip</type>
+											<overWrite>false</overWrite>
+											<outputDirectory>${project.build.directory}/node2</outputDirectory>
 										</artifactItem>
 									</artifactItems>
 								</configuration>
