Adding WF to WF test

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,29 @@
 							</execution>
 						</executions>
 					</plugin>
+					<!--plugin>
+						<artifactId>maven-resources-plugin</artifactId>
+						<version>3.0.2</version>
+						<executions>
+							<execution>
+								<id>copy-resources</id>
+								<phase>validate</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<outputDirectory>${basedir}/target/node2/wildfly-${version.org.wildfly}/standalone/configuration/</outputDirectory>
+									<resources>
+										<resource>
+											<directory>src/resources-filtered/arquillian</directory>
+											<filtering>true</filtering>
+											<include>EjbRemotingStandalone.xml</include>
+										</resource>
+									</resources>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin-->
 				</plugins>
 			</build>
 		</profile>
